[gd_scene load_steps=5 format=3 uid="uid://di1hgs2r1hhlp"]

[ext_resource type="Script" path="res://scenes/motor.gd" id="1_4i07t"]
[ext_resource type="Texture2D" uid="uid://c8wp2xa8cwtx3" path="res://assets/motor.png" id="1_8pvdr"]
[ext_resource type="AudioStream" uid="uid://vqcendp8xyjq" path="res://assets/sounds/FreeSFX/GameSFX/PowerUp/Retro PowerUP 09.wav" id="3_kfk12"]

[sub_resource type="CircleShape2D" id="CircleShape2D_32n47"]
radius = 17.0

[node name="motor" type="Node2D"]
visibility_layer = 3
script = ExtResource("1_4i07t")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.17, 0.17)
texture = ExtResource("1_8pvdr")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_32n47")

[node name="pickup_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 1)
stream = ExtResource("3_kfk12")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="finished" from="pickup_sound" to="." method="_on_pickup_sound_finished"]
